--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -45,7 +45,7 @@
 <!-- End Google Tag Manager (noscript) -->
 
 <header class="app-bar">
-  <div class="mdc-layout-grid layout-width">
+  <div class="mdc-layout-grid layout-wrapper">
     <div class="mdc-layout-grid__inner">
       <div
         class="hamburger mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-5-tablet">
@@ -137,7 +137,9 @@
         class="app-bar_menu mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-6-desktop">
         <nav id="navigation" class="menu">
           <ul class="menu__list">
-
+            <li>OVĚŘIT VÝVOJ CENY</li>
+            <li>PROČ TO DĚLÁME</li>
+            <li>MÉDIA</li>
           </ul>
         </nav>
       </div>
@@ -530,7 +532,8 @@
       </div>
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-desktop">
-        <img alt="Hlídač Shopů - Ukázka" src="https://res.cloudinary.com/topmonks/image/upload/v1572121016/www.hlidacshopu.cz/hlidac-shopu.svg">
+        <img alt="Hlídač Shopů - Ukázka"
+             src="https://res.cloudinary.com/topmonks/image/upload/v1572121016/www.hlidacshopu.cz/hlidac-shopu.svg">
       </div>
     </div>
   </div>
@@ -554,9 +557,10 @@
     <div class="mdc-layout-grid__inner layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Jak Hlídač Shopů vypadá a jak číst graf?</h2>
-        <img alt="Jak Hlídač Shopů vypadá a jak číst graf?" src="https://res.cloudinary.com/topmonks/image/upload/v1572120642/www.hlidacshopu.cz/second-bgnd.jpg">
+        <img alt="Jak Hlídač Shopů vypadá a jak číst graf?"
+             src="https://res.cloudinary.com/topmonks/image/upload/v1572120642/www.hlidacshopu.cz/second-bgnd.jpg">
         <p>Hlídač Shopů si můžete nainstalovat přímo do svého prohlížeče a
-          hlídat tak největší e-shopy  a jejich někdy prapodivné taktiky při
+          hlídat tak největší e-shopy a jejich někdy prapodivné taktiky při
           tvoření&nbsp;slev.</p>
       </div>
     </div>
@@ -567,7 +571,7 @@
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>Instalace rozšíření</h2>
+        <h2>Jak a proč nainstalovat rozšíření Hlídač Shopů?</h2>
         <p class="text--grey">s pomocí rozšíření budete mít hlídač shopů stále při ruce</p>
       </div>
       <div class="browser-support mdc-layout-grid__cell">
@@ -657,52 +661,63 @@
         </svg>
         <p class="sub-info--grey">Brzy podpora pro<br>Brave prohlížeč</p>
       </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <h3>Instalace Hlídače Shopů do prohlížeče</h3>
+        <p>Aktuálně si můžete Hlídače Shopů nainstalovat pouze do Chromu a
+          Firefoxu. Pokud Chrome a Firefox nepoužíváte, vydržte. Usilovně makáme na
+          verzích rozšíření Hlídače Shopů i&nbsp;pro další prohlížeče.</p>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <h3>Proč byste si měli rozšíření Hlídače Shopů instalovat a jak to vlastně vypadá?</h3>
+        <p>Rozšíření v&nbsp;prohlížeči vám umožňuje kontrolovat ceny rovnou na
+          stránkách e-shopů. Nemusíte se pracně vracet na tento web s&nbsp;odkazem
+          každého produktu, který chcete překontrolovat.</p>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <h3>Instalace probíhá ve třech jednoduchých krocích</h3>
+      </div>
+
 
       <div class="step_1 mdc-layout-grid__cell">
-        <img src="/images/search.jpg" alt="Najít Rozšíření - Obrázkový Průvodce" style="max-width: 342px">
+        <img src="https://res.cloudinary.com/topmonks/image/upload/v1572121993/www.hlidacshopu.cz/search.jpg"
+             alt="Najít Rozšíření - Obrázkový Průvodce" style="max-width: 342px">
         <h3>Najít rozšíření</h3>
-        <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+        <p class="grey-text">Přejděte do obchodu Chrome na stránku Hlídače Shopů.</p>
       </div>
       <div class="step_2 mdc-layout-grid__cell">
-        <img src="/images/install.jpg" alt="Instalovat Rozšíření - Obrázkový Průvodce" style="max-width: 342px">
+        <img src="https://res.cloudinary.com/topmonks/image/upload/v1572121995/www.hlidacshopu.cz/install.jpg"
+             alt="Instalovat Rozšíření - Obrázkový Průvodce" style="max-width: 342px">
         <h3>Instalace rozšíření</h3>
-        <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+        <p class="grey-text">Vpravo nahoře klikněte na tlačítko Přidat do Chromu</p>
       </div>
       <div class="step_3 mdc-layout-grid__cell">
-        <img src="/images/usage.jpg" alt="Použití Rozšíření - Obrázkový Průvodce" style="max-width: 342px">
+        <img src="https://res.cloudinary.com/topmonks/image/upload/v1572121999/www.hlidacshopu.cz/usage.jpg"
+             alt="Použití Rozšíření - Obrázkový Průvodce" style="max-width: 342px">
         <h3>Používat rozšíření</h3>
-        <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+        <p class="grey-text">Poté na vás vyskočí okno, kde potvrdíte přidání do Chromu tlačítkem Přidat rozšíření.</p>
       </div>
       <div class="btn mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <h3>A&nbsp;máte hotovo! Skvěle.</h3>
+        <p>Teď už jen stačí přejít do vašeho oblíbeného e-shopu a vesele kontrolovat jeho cenotvorbu.</p>
         <a class="button" type="button">Nainstalovat do prohlížeče</a>
       </div>
     </div>
   </div>
 </section>
-<section class="">
-  <div class="mdc-layout-grid">
-    <div class="mdc-layout-grid__inner layout-wrapper">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>Ukázka použítí</h2>
-        <p class="text--grey">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
-      </div>
-    </div>
-  </div>
-</section>
+
 <section class="numbers">
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Naše čísla</h2>
-        <p class="text--grey">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
       </div>
       <div class="mdc-layout-grid__cell">
         <p class="text--grey">Počet stažení</p>
-        <p class="numbers">4 000 +</p>
+        <p class="numbers">3 800 +</p>
       </div>
       <div class="mdc-layout-grid__cell">
         <p class="text--grey">Počet e-shopů</p>
-        <p class="numbers">15 +</p>
+        <p class="numbers">13 +</p>
       </div>
       <div class="mdc-layout-grid__cell">
         <p class="text--grey">Počet produktů</p>
@@ -711,9 +726,68 @@
     </div>
   </div>
 </section>
-<div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-  <hr class="layout-wrapper">
-</div>
+<section class="references">
+  <div class="mdc-layout-grid">
+    <div class="mdc-layout-grid__inner layout-wrapper">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <h2>Co o&nbsp;nás říkají uživatelé</h2>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <div class="mdc-layout-grid__inner">
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+          </div>
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
+            <span>Marek Sukup</span>
+            <span>10. 12. 2018</span>
+          </div>
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+            <p>Skvělý doplněka a výborný nápad něco takového vytvořit. Clovek si
+              tak udelá představu o&nbsp;tom jak funguji slevy a z&nbsp;jake ceny se
+              slevuje&nbsp;…</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <div class="mdc-layout-grid__inner">
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+          </div>
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
+            <span>Táňa Lálová</span>
+            <span>Mluvčí Mall.cz</span>
+          </div>
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+            <p>Aktivity, jako je například Apify vítáme, protože pomáhají
+              zákazníkům s&nbsp;orientací na trhu. Naším cílem je být transparentní a
+              umožnit lidem rychle a snadno ověřit uvedenou&nbsp;cenu.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <div class="mdc-layout-grid__inner">
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+          </div>
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
+            <span>Marek Sukup</span>
+            <span class="">10. 12. 2018</span>
+          </div>
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+            <p>Skvělý doplněka a výborný nápad něco takového vytvořit. Clovek si
+              tak udelá představu o&nbsp;tom jak funguji slevy a z&nbsp;jake ceny se
+              slevuje&nbsp;…</p>
+          </div>
+        </div>
+      </div>
+      <div class="references_link mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <a>Další hodnocení nalezente zde</a>
+      </div>
+
+
+    </div>
+  </div>
+</section>
+
 
 </body>
 <footer>
