--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -209,6 +209,7 @@
               <button>OVĚŘIT VÝVOJ CENY</button>
             </label>
           </div>
+          <!--
           <div class="alert alert--error alert--hidden">
             <span class="closebtn" onclick="this.parentElement.style.display=quot;none&quot;">×</span>
             A&nbsp;sakra! Něco je fakt špatně.
@@ -216,7 +217,7 @@
           <div class="alert alert--success alert--hidden">
             <span class="closebtn" onclick="this.parentElement.style.display=quot;none&quot;">×</span>
             Váš e-mail sme si odložili. Ozveme sa.
-          </div>
+          </div>-->
 
           <h2>AKTUÁLNĚ MONITORUJEME TYTO ESHOPY</h2>
           <div class="logos">
@@ -737,7 +738,7 @@
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
           </div>
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-            <span>Marek Sukup</span>
+            <span>Marek Sukup</span><br>
             <span>10. 12. 2018</span>
           </div>
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -753,7 +754,7 @@
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
           </div>
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-            <span>Táňa Lálová</span>
+            <span>Táňa Lálová</span><br>
             <span>Mluvčí Mall.cz</span>
           </div>
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -769,7 +770,7 @@
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
           </div>
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-            <span>Marek Sukup</span>
+            <span>Marek Sukup</span><br>
             <span class="">10. 12. 2018</span>
           </div>
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -867,14 +868,15 @@
             </clipPath>
           </defs>
         </svg>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Fusce wisi. Phasellus faucibus molestie nisl.</p>
+        <p>Hlídač shopů je neziskový projekt, jehož cílem je chránit české
+          spotřebitele před vynalézavostí marketingových oddělení velkých
+          českých eshopů. Více o&nbsp;nás&nbsp;…</p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
         <h3>NAVIGACE</h3>
         <ul>
+          <li><a>OVĚŘIT VÝVOJ CENY</a></li>
           <li><a>PROČ TO DĚLÁME</a></li>
-          <li><a>CO TO UMÍ</a></li>
-          <li><a>INSTALACE PLUGINU</a></li>
           <li><a>MÉDIA</a></li>
         </ul>
       </div>
@@ -959,7 +961,7 @@
 
       <div
         class="company mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <span>© 2019 TopMonks, Apify, Keboola</span>
+        <span>© 2019, TopMonks, Apify, Keboola</span>
       </div>
       <div
         class="terms mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-desktop">
