Hlidac shopu HP

--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -536,12 +536,8 @@
         <span>© 2019, TopMonks, Apify, Keboola</span>
       </div>
       <div
-        class="terms mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-desktop">
-        <a href="">Terms &amp; Conditions</a>
-      </div>
-      <div
-        class="terms mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
-        <a href="">Privacy</a>
+        class="terms mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        <a href="osobni-udaje">Zásady Ochrany Osobních Údajů</a>
       </div>
     </div>
   </div>
