--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -139,7 +139,7 @@
           <ul class="menu__list">
             <li class="list_item">OVĚŘIT VÝVOJ CENY</li>
             <li class="list_item">PROČ TO DĚLÁME</li>
-            <li class="list_item">MÉDIA</li>
+            <li class="list_item"><a href="/media">MÉDIA</a></li>
           </ul>
         </nav>
       </div>
