HS - Cloudinary auto images

--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -314,7 +314,7 @@
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-desktop">
         <img alt="Hlídač Shopů - Ukázka"
-             src="https://res.cloudinary.com/topmonks/image/upload/v1572121016/www.hlidacshopu.cz/hlidac-shopu.svg">
+             src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto/v1572271246/www.hlidacshopu.cz/porovnani-cen.svg">
       </div>
     </div>
   </div>
@@ -339,7 +339,7 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Jak Hlídač Shopů vypadá a jak číst graf?</h2>
         <img alt="Jak Hlídač Shopů vypadá a jak číst graf?"
-             src="https://res.cloudinary.com/topmonks/image/upload/v1572120642/www.hlidacshopu.cz/second-bgnd.jpg">
+             src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto/v1572120642/www.hlidacshopu.cz/second-bgnd.jpg">
         <p>Hlídač Shopů si můžete <b>nainstalovat přímo do svého prohlížeče</b> a
           hlídat tak největší e-shopy a jejich někdy prapodivné taktiky při
           tvoření&nbsp;slev.</p>
@@ -384,19 +384,19 @@
 
 
       <div class="step_1 mdc-layout-grid__cell">
-        <img src="https://res.cloudinary.com/topmonks/image/upload/v1572121993/www.hlidacshopu.cz/search.jpg"
+        <img src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto/v1572121993/www.hlidacshopu.cz/search.jpg"
              alt="Najít Rozšíření - Obrázkový Průvodce" style="max-width: 342px">
         <h3>Najít rozšíření</h3>
         <p class="grey-text">Přejděte do <b class="text--purple">obchodu Chrome</b> na stránku Hlídače Shopů.</p>
       </div>
       <div class="step_2 mdc-layout-grid__cell">
-        <img src="https://res.cloudinary.com/topmonks/image/upload/v1572121995/www.hlidacshopu.cz/install.jpg"
+        <img src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto/v1572121995/www.hlidacshopu.cz/install.jpg"
              alt="Instalovat Rozšíření - Obrázkový Průvodce" style="max-width: 342px">
         <h3>Instalace rozšíření</h3>
         <p class="grey-text">Vpravo nahoře klikněte na tlačítko Přidat do Chromu</p>
       </div>
       <div class="step_3 mdc-layout-grid__cell">
-        <img src="https://res.cloudinary.com/topmonks/image/upload/v1572121999/www.hlidacshopu.cz/usage.jpg"
+        <img src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto/v1572121999/www.hlidacshopu.cz/usage.jpg"
              alt="Použití Rozšíření - Obrázkový Průvodce" style="max-width: 342px">
         <h3>Používat rozšíření</h3>
         <p class="grey-text">Poté na vás vyskočí okno, kde potvrdíte přidání do Chromu tlačítkem Přidat rozšíření.</p>
