HS - links to webs

--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -221,21 +221,22 @@
 
           <h2 class="sub-title">AKTUÁLNĚ MONITORUJEME TYTO ESHOPY</h2>
           <div class="logos">
-            <img alt="Barevné Logo Alza.cz" src="/images/logos/alza_logo.svg">
-            <img alt="Barevné Logo CZC.cz" src="/images/logos/czc.cz_logo.svg">
-            <img alt="Barevné Logo Datart" src="/images/logos/datart_logo.svg">
-            <img alt="Barevné Logo Tesco" src="/images/logos/tesco_logo.svg">
-            <img alt="Barevné Logo Kasa.cz" src="/images/logos/kasa_logo.svg">
-            <img alt="Barevné Logo Košík.cz" src="/images/logos/kosik_logo.svg">
-            <img alt="Barevné Logo Lékárna.cz" src="/images/logos/lekarna_logo.svg">
+            <a href="https://www.alza.cz/"> <img alt="Barevné Logo Alza.cz" src="/images/logos/alza_logo.svg"></a>
+
+            <a href="https://www.czc.cz/"><img alt="Barevné Logo CZC.cz" src="/images/logos/czc.cz_logo.svg"></a>
+            <a href="https://www.datart.cz/"><img alt="Barevné Logo Datart" src="/images/logos/datart_logo.svg"></a>
+            <a href="https://www.itesco.cz/"><img alt="Barevné Logo Tesco" src="/images/logos/tesco_logo.svg"></a>
+            <a href="https://www.kasa.cz/"> <img alt="Barevné Logo Kasa.cz" src="/images/logos/kasa_logo.svg"></a>
+            <a href="https://www.kosik.cz/"> <img alt="Barevné Logo Košík.cz" src="/images/logos/kosik_logo.svg"></a>
+            <a href="https://www.lekarna.cz/"><img alt="Barevné Logo Lékárna.cz" src="/images/logos/lekarna_logo.svg"></a>
           </div>
           <div class="logos">
-            <img alt="Barevné Logo Mountfield" src="/images/logos/mountfield_logo.svg">
-            <img alt="Barevné Logo Notino" src="/images/logos/notino_logo.svg">
-            <img alt="Barevné Logo Rohlik.cz" src="/images/logos/rohlik_logo.svg">
-            <img alt="Barevné Logo TSBohemia" src="/images/logos/tsbohemia_logo.svg">
-            <img alt="Barevné Logo Mironet" src="/images/logos/mironet_logo.svg">
-            <img alt="Barevné Logo Mall.cz" src="/images/logos/mall_logo.svg">
+            <a href="https://www.mountfield.cz/"><img alt="Barevné Logo Mountfield" src="/images/logos/mountfield_logo.svg"></a>
+            <a href="https://www.notino.cz/"><img alt="Barevné Logo Notino" src="/images/logos/notino_logo.svg"></a>
+            <a href="https://www.rohlik.cz/"> <img alt="Barevné Logo Rohlik.cz" src="/images/logos/rohlik_logo.svg"></a>
+            <a href="https://www.tsbohemia.cz/"> <img alt="Barevné Logo TSBohemia" src="/images/logos/tsbohemia_logo.svg"></a>
+            <a href="https://www.mironet.cz/"> <img alt="Barevné Logo Mironet" src="/images/logos/mironet_logo.svg"></a>
+            <a href="https://www.mall.cz/"> <img alt="Barevné Logo Mall.cz" src="/images/logos/mall_logo.svg"></a>
 
           </div>
           <p>Není sleva jako sleva. Někdy obchody těsně před vlnou slev uměle
@@ -384,20 +385,23 @@
 
 
       <div class="step_1 mdc-layout-grid__cell">
-        <img src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto/v1572121993/www.hlidacshopu.cz/search.jpg"
-             alt="Najít Rozšíření - Obrázkový Průvodce" style="max-width: 342px">
+        <img
+          src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto/v1572121993/www.hlidacshopu.cz/search.jpg"
+          alt="Najít Rozšíření - Obrázkový Průvodce" style="max-width: 342px">
         <h3>Najít rozšíření</h3>
         <p class="grey-text">Přejděte do <b class="text--purple">obchodu Chrome</b> na stránku Hlídače Shopů.</p>
       </div>
       <div class="step_2 mdc-layout-grid__cell">
-        <img src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto/v1572121995/www.hlidacshopu.cz/install.jpg"
-             alt="Instalovat Rozšíření - Obrázkový Průvodce" style="max-width: 342px">
+        <img
+          src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto/v1572121995/www.hlidacshopu.cz/install.jpg"
+          alt="Instalovat Rozšíření - Obrázkový Průvodce" style="max-width: 342px">
         <h3>Instalace rozšíření</h3>
         <p class="grey-text">Vpravo nahoře klikněte na tlačítko Přidat do Chromu</p>
       </div>
       <div class="step_3 mdc-layout-grid__cell">
-        <img src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto/v1572121999/www.hlidacshopu.cz/usage.jpg"
-             alt="Použití Rozšíření - Obrázkový Průvodce" style="max-width: 342px">
+        <img
+          src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto/v1572121999/www.hlidacshopu.cz/usage.jpg"
+          alt="Použití Rozšíření - Obrázkový Průvodce" style="max-width: 342px">
         <h3>Používat rozšíření</h3>
         <p class="grey-text">Poté na vás vyskočí okno, kde potvrdíte přidání do Chromu tlačítkem Přidat rozšíření.</p>
       </div>
