--- a/www.hlidacshopu.cz/src/html/media/index.html
+++ b/www.hlidacshopu.cz/src/html/media/index.html
@@ -206,9 +206,7 @@
           <div class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
             <div class="media-article-item__image">
               <img src="../../images/black-friday-slevy-e-commerce-1-prev%201.png" alt="clanek"/>
-              <span class="media-article-item__image-tag media-tag--press">
-                Tisková zpráva
-              </span>
+              <span class="media-article-item__image-tag media-tag--press">Tisková zpráva</span>
             </div>
           </div>
           <div
@@ -216,9 +214,10 @@
             <h3>Black Friday po česku: kouzla se slevami po roce</h3>
             <p class="media__date">10.prosince 2019</p>
             <div class="media__description">
-              Po loňské úspěšné analýze slev v rámci Black Friday jsme se opět rozhodli podívat na to, jak největší
-              české e-shopy pracují s tímto fenoménem. Hlavně nás zajímalo, zda stále čarují se slevami, převážně pomocí
-              umělého navyšování původních cen ...
+              Po loňské úspěšné analýze slev v&nbsp;rámci Black Friday jsme se opět
+              rozhodli podívat na to, jak největší české e-shopy pracují s&nbsp;tímto
+              fenoménem. Hlavně nás zajímalo, zda stále čarují se slevami, převážně
+              pomocí umělého navyšování původních cen&nbsp;…
             </div>
           </div>
         </div>
@@ -226,9 +225,7 @@
           <div class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
             <div class="media-article-item__image">
               <img src="../../images/black-friday-slevy-e-commerce-1-prev%201.png" alt="clanek"/>
-              <span class="media-article-item__image-tag media-tag--about-us">
-                Napsali o nás
-              </span>
+              <span class="media-article-item__image-tag media-tag--about-us">Napsali o&nbsp;nás</span>
             </div>
           </div>
           <div
@@ -236,9 +233,10 @@
             <h3>Black Friday po česku: kouzla se slevami po roce</h3>
             <p class="media__date">10.prosince 2019</p>
             <div class="media__description">
-              Po loňské úspěšné analýze slev v rámci Black Friday jsme se opět rozhodli podívat na to, jak největší
-              české e-shopy pracují s tímto fenoménem. Hlavně nás zajímalo, zda stále čarují se slevami, převážně pomocí
-              umělého navyšování původních cen ...
+              Po loňské úspěšné analýze slev v&nbsp;rámci Black Friday jsme se opět
+              rozhodli podívat na to, jak největší české e-shopy pracují s&nbsp;tímto
+              fenoménem. Hlavně nás zajímalo, zda stále čarují se slevami, převážně
+              pomocí umělého navyšování původních cen&nbsp;…
             </div>
           </div>
         </div>
@@ -246,9 +244,7 @@
           <div class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
             <div class="media-article-item__image">
               <img src="../../images/black-friday-slevy-e-commerce-1-prev%201.png" alt="clanek"/>
-              <span class="media-article-item__image-tag media-tag--about-us">
-                Napsali o nás
-              </span>
+              <span class="media-article-item__image-tag media-tag--about-us">Napsali o&nbsp;nás</span>
             </div>
           </div>
           <div
@@ -256,9 +252,10 @@
             <h3>Black Friday po česku: kouzla se slevami po roce</h3>
             <p class="media__date">10.prosince 2019</p>
             <div class="media__description">
-              Po loňské úspěšné analýze slev v rámci Black Friday jsme se opět rozhodli podívat na to, jak největší
-              české e-shopy pracují s tímto fenoménem. Hlavně nás zajímalo, zda stále čarují se slevami, převážně pomocí
-              umělého navyšování původních cen ...
+              Po loňské úspěšné analýze slev v&nbsp;rámci Black Friday jsme se opět
+              rozhodli podívat na to, jak největší české e-shopy pracují s&nbsp;tímto
+              fenoménem. Hlavně nás zajímalo, zda stále čarují se slevami, převážně
+              pomocí umělého navyšování původních cen&nbsp;…
             </div>
           </div>
         </div>
@@ -273,9 +270,10 @@
             <h3>Black Friday po česku: kouzla se slevami po roce</h3>
             <p class="media__date">10.prosince 2019</p>
             <div class="media__description">
-              Po loňské úspěšné analýze slev v rámci Black Friday jsme se opět rozhodli podívat na to, jak největší
-              české e-shopy pracují s tímto fenoménem. Hlavně nás zajímalo, zda stále čarují se slevami, převážně pomocí
-              umělého navyšování původních cen ...
+              Po loňské úspěšné analýze slev v&nbsp;rámci Black Friday jsme se opět
+              rozhodli podívat na to, jak největší české e-shopy pracují s&nbsp;tímto
+              fenoménem. Hlavně nás zajímalo, zda stále čarují se slevami, převážně
+              pomocí umělého navyšování původních cen&nbsp;…
             </div>
           </div>
         </div>
@@ -286,22 +284,21 @@
           <div class="media-press-grid__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-desktop">
             <h3>Black Friday po česku: kouzla se slevami po roce</h3>
             <p class="media__date">10.prosince 2019</p>
-            <div class="media__description">
-              Po loňské úspěšné analýze slev v rámci Black Friday jsme se opět ...
+            <div class="media__description">Po loňské úspěšné analýze slev v&nbsp;rámci Black Friday jsme se opět&nbsp;…
             </div>
           </div>
           <div class="media-press-grid__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-desktop">
             <h3>Black Friday po česku: kouzla se slevami po roce</h3>
             <p class="media__date">10.prosince 2019</p>
             <div class="media__description">
-              Po loňské úspěšné analýze slev v rámci Black Friday jsme se opět ...
+              Po loňské úspěšné analýze slev v&nbsp;rámci Black Friday jsme se opět&nbsp;…
             </div>
           </div>
           <div class="media-press-grid__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone  mdc-layout-grid__cell--span-4-desktop">
             <h3>Black Friday po česku: kouzla se slevami po roce</h3>
             <p class="media__date">10.prosince 2019</p>
             <div class="media__description">
-              Po loňské úspěšné analýze slev v rámci Black Friday jsme se opět ...
+              Po loňské úspěšné analýze slev v&nbsp;rámci Black Friday jsme se opět&nbsp;…
             </div>
           </div>
         </div>
@@ -326,9 +323,10 @@
             <h3>Black Friday po česku: kouzla se slevami po roce</h3>
             <p class="media__date">10.prosince 2019</p>
             <div class="media__description">
-              Po loňské úspěšné analýze slev v rámci Black Friday jsme se opět rozhodli podívat na to, jak největší
-              české e-shopy pracují s tímto fenoménem. Hlavně nás zajímalo, zda stále čarují se slevami, převážně pomocí
-              umělého navyšování původních cen ...
+              Po loňské úspěšné analýze slev v&nbsp;rámci Black Friday jsme se opět
+              rozhodli podívat na to, jak největší české e-shopy pracují s&nbsp;tímto
+              fenoménem. Hlavně nás zajímalo, zda stále čarují se slevami, převážně
+              pomocí umělého navyšování původních cen&nbsp;…
             </div>
           </div>
         </div>
@@ -346,9 +344,10 @@
             <h3>Black Friday po česku: kouzla se slevami po roce</h3>
             <p class="media__date">10.prosince 2019</p>
             <div class="media__description">
-              Po loňské úspěšné analýze slev v rámci Black Friday jsme se opět rozhodli podívat na to, jak největší
-              české e-shopy pracují s tímto fenoménem. Hlavně nás zajímalo, zda stále čarují se slevami, převážně pomocí
-              umělého navyšování původních cen ...
+              Po loňské úspěšné analýze slev v&nbsp;rámci Black Friday jsme se opět
+              rozhodli podívat na to, jak největší české e-shopy pracují s&nbsp;tímto
+              fenoménem. Hlavně nás zajímalo, zda stále čarují se slevami, převážně
+              pomocí umělého navyšování původních cen&nbsp;…
             </div>
           </div>
         </div>
@@ -366,9 +365,10 @@
             <h3>Black Friday po česku: kouzla se slevami po roce</h3>
             <p class="media__date">10.prosince 2019</p>
             <div class="media__description">
-              Po loňské úspěšné analýze slev v rámci Black Friday jsme se opět rozhodli podívat na to, jak největší
-              české e-shopy pracují s tímto fenoménem. Hlavně nás zajímalo, zda stále čarují se slevami, převážně pomocí
-              umělého navyšování původních cen ...
+              Po loňské úspěšné analýze slev v&nbsp;rámci Black Friday jsme se opět
+              rozhodli podívat na to, jak největší české e-shopy pracují s&nbsp;tímto
+              fenoménem. Hlavně nás zajímalo, zda stále čarují se slevami, převážně
+              pomocí umělého navyšování původních cen&nbsp;…
             </div>
           </div>
         </div>
@@ -383,9 +383,10 @@
             <h3>Black Friday po česku: kouzla se slevami po roce</h3>
             <p class="media__date">10.prosince 2019</p>
             <div class="media__description">
-              Po loňské úspěšné analýze slev v rámci Black Friday jsme se opět rozhodli podívat na to, jak největší
-              české e-shopy pracují s tímto fenoménem. Hlavně nás zajímalo, zda stále čarují se slevami, převážně pomocí
-              umělého navyšování původních cen ...
+              Po loňské úspěšné analýze slev v&nbsp;rámci Black Friday jsme se opět
+              rozhodli podívat na to, jak největší české e-shopy pracují s&nbsp;tímto
+              fenoménem. Hlavně nás zajímalo, zda stále čarují se slevami, převážně
+              pomocí umělého navyšování původních cen&nbsp;…
             </div>
           </div>
         </div>
