--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -220,9 +220,8 @@
           </div>-->
 
           <h2 class="sub-title">AKTUÁLNĚ MONITORUJEME TYTO ESHOPY</h2>
-          <div class="logos">
+          <div class="logos mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-12">
             <a href="https://www.alza.cz/"> <img alt="Barevné Logo Alza.cz" src="/images/logos/alza_logo.svg"></a>
-
             <a href="https://www.czc.cz/"><img alt="Barevné Logo CZC.cz" src="/images/logos/czc.cz_logo.svg"></a>
             <a href="https://www.datart.cz/"><img alt="Barevné Logo Datart" src="/images/logos/datart_logo.svg"></a>
             <a href="https://www.itesco.cz/"><img alt="Barevné Logo Tesco" src="/images/logos/tesco_logo.svg"></a>
@@ -237,7 +236,6 @@
             <a href="https://www.tsbohemia.cz/"> <img alt="Barevné Logo TSBohemia" src="/images/logos/tsbohemia_logo.svg"></a>
             <a href="https://www.mironet.cz/"> <img alt="Barevné Logo Mironet" src="/images/logos/mironet_logo.svg"></a>
             <a href="https://www.mall.cz/"> <img alt="Barevné Logo Mall.cz" src="/images/logos/mall_logo.svg"></a>
-
           </div>
           <p>Není sleva jako sleva. Někdy obchody těsně před vlnou slev uměle
             navyšují původní ceny, aby konečná sleva působila výhodně. Hlídač
@@ -355,15 +353,15 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Jak a proč nainstalovat rozšíření Hlídač Shopů?</h2>
       </div>
-      <div class="browser-support mdc-layout-grid__cell">
+      <div class="browser-support mdc-layout-grid__cell mdc-layout-grid__cell--span-1-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
         <img src="/images/google_icon.svg" alt="Barevná ikona prohlížeče Google Chrome">
         <p class="sub-info--grey">Podporujeme<br>Chrome prohlížeč</p>
       </div>
-      <div class="browser-support mdc-layout-grid__cell">
+      <div class="browser-support mdc-layout-grid__cell mdc-layout-grid__cell--span-1-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
         <img src="/images/firefox_icon.svg" alt="Šedá ikona prohlížeče FireFox">
         <p class="sub-info--grey">Brzy podpora pro<br>Firefox prohlížeč</p>
       </div>
-      <div class="browser-support mdc-layout-grid__cell">
+      <div class="browser-support mdc-layout-grid__cell mdc-layout-grid__cell--span-1-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
         <img src="/images/brave_icon.svg" alt="Šedá ikona prohlížeče Brave">
         <p class="sub-info--grey">Brzy podpora pro<br>Brave prohlížeč</p>
       </div>
