--- a/www.hlidacshopu.cz/src/html/osobni-udaje/index.html
+++ b/www.hlidacshopu.cz/src/html/osobni-udaje/index.html
@@ -171,9 +171,9 @@
         class="app-bar_menu mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-6-desktop">
         <nav id="navigation" class="menu">
           <ul class="menu__list">
-            <li class="list_item">OVĚŘIT VÝVOJ CENY</li>
-            <li class="list_item">PROČ TO DĚLÁME</li>
-            <li class="list_item">MÉDIA</li>
+            <li class="list_item"><a href="">OVĚŘIT VÝVOJ CENY</a></li>
+            <li class="list_item"><a href="/proc-to-delame">PROČ TO DĚLÁME</a></li>
+            <li class="list_item"><a href="/media">MÉDIA</a></li>
           </ul>
         </nav>
       </div>
@@ -254,7 +254,7 @@
           </li>
           <li>Provozovatel je konzultantem v&nbsp;oblasti sběru a zpracování dat
             z&nbsp;českých eshopů a softwarového inženýrství. Tento web
-            (<a href="http://hlidacshopu.cz/">hlidacshopu.cz</a>) provozuje za
+            (<a href="https://www.hlidacshopu.cz/">hlidacshopu.cz</a>) provozuje za
             účelem informovat spotřebitele o&nbsp;reálných slevách a kreativních
             praktikách při tvoření slev na českých eshopech. V&nbsp;rámci této služby
             <b>nejsou Provozovatelem zpracovávány žádné</b> Osobní&nbsp;údaje.
@@ -284,7 +284,7 @@
         <ol>
           <li>Uživatel má právo kdykoli ve svém zařízení soubory cookies vymazat a
             znemožnit tak identifikaci jeho návštěvy na webu <a
-              href="http://hlidacshopu.cz/">hlidacshopu.cz</a> .
+              href="https://www.hlidacshopu.cz/">hlidacshopu.cz</a> .
           </li>
         </ol>
         <h2>IV. Závěrečná ustanovení</h2>
@@ -317,9 +317,9 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
         <h3>NAVIGACE</h3>
         <ul>
-          <li><a>OVĚŘIT VÝVOJ CENY</a></li>
-          <li><a>PROČ TO DĚLÁME</a></li>
-          <li><a>MÉDIA</a></li>
+          <li class="list_item"><a href="">OVĚŘIT VÝVOJ CENY</a></li>
+          <li class="list_item"><a href="/proc-to-delame">PROČ TO DĚLÁME</a></li>
+          <li class="list_item"><a href="/media">MÉDIA</a></li>
         </ul>
       </div>
       <div class="logo-box mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
@@ -343,12 +343,8 @@
         <span>© 2019, TopMonks, Apify, Keboola</span>
       </div>
       <div
-        class="terms mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
-        <a href="">Pravidla &amp; Podmínky</a>
-      </div>
-      <div
-        class="terms mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-desktop">
-        <a href="osobni-udaje">Zásady Ochrany Osobních Údajů</a>
+        class="terms mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        <a href="/osobni-udaje">Zásady Ochrany Osobních Údajů</a>
       </div>
     </div>
   </div>
