--- a/www.hlidacshopu.cz/src/html/dashboard/index.html
+++ b/www.hlidacshopu.cz/src/html/dashboard/index.html
@@ -138,7 +138,7 @@
         <nav id="navigation" class="menu">
           <ul class="menu__list">
             <li class="list_item">OVĚŘIT VÝVOJ CENY</li>
-            <li class="list_item">PROČ TO DĚLÁME</li>
+            <li class="list_item"><a href="/proc-to-delame">PROČ TO DĚLÁME</a></li>
             <li class="list_item"><a href="/media">MÉDIA</a></li>
           </ul>
         </nav>
@@ -457,8 +457,8 @@
         <h3>NAVIGACE</h3>
         <ul>
           <li><a>OVĚŘIT VÝVOJ CENY</a></li>
-          <li><a>PROČ TO DĚLÁME</a></li>
-          <li><a>MÉDIA</a></li>
+          <li class="list_item"><a href="/proc-to-delame">PROČ TO DĚLÁME</a></li>
+          <li class="list_item"><a href="/media">MÉDIA</a></li>
         </ul>
       </div>
       <div class="logo-box mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
